# ragchatbot

./: .gitignore  .replit  Dockerfile  README.md  README_BACKEND.md  TASKS_AND_DOCS.md  railway.json  render.yaml  requirements.txt  start.sh  tasks.md  vercel.json
api/: index.py
backend/: fetch_sitemap_data.py  generate_embeddings.py  main.py  pyproject.toml  requirements.txt  sitemap_rag_main.py
backend/docs/: agent_system.md  api_documentation.md  architecture.md  deployment.md  implementation_status.md  sitemap_integration.md
backend/src/agents/: __init__.py  rag_agent.py
backend/src/api/: main.py
backend/src/api/middleware/: auth.py
backend/src/api/routes/: chat.py  documents.py  sessions.py
backend/src/core/: agent_base.py  config.py  database.py  store.py  vector_store.py
backend/src/models/: database_models.py  entities.py
backend/src/services/: document_service.py  embedding_service.py  llm_service.py  rag_service.py  rag_tool.py  session_service.py
backend/src/utils/: sitemap_embedder.py  sitemap_parser.py  web_scraper.py
backend/tests/: test_main.py  test_rag_service.py  test_store.py
backend/tests/contract/: test_chat.py  test_documents.py  test_sessions.py
backend/tests/integration/: test_conversation_history.py  test_rag_flow.py  test_selected_text.py
frontend/: .eslintrc  package-lock.json  package.json  vite.config.ts
history/: implementation_history_agent_chatkit.md
skills/: 01_chatkit_sdk.md  02_neon_postgresql.md  03_qdrant_vector_store.md  04_cohere_embeddings.md  05_rag_pipeline.md  06_web_scraping_sitemap.md  README.md  (+1 more)
(+20 files in other folders)
